# California

./: CMakeLists.txt  README.md  main.cpp
array/: CMakeLists.txt  init.cpp
medium/: CMakeLists.txt  parctice7.cpp  practice1.cpp  practice2.cpp  practice3.cpp  practice4.cpp  practice5.cpp  practice6.cpp  sumOfTwoNumber.cpp
simple/: CMakeLists.txt  init.cpp  practice1.cpp  practice2.cpp
superior/: CMakeLists.txt
